<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/rdCallPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_call_phone" />

        <RadioButton
            android:id="@+id/rdEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_send_email" />

        <RadioButton
            android:id="@+id/rdVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_play_video" />

        <RadioButton
            android:id="@+id/rdPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_send_picture" />

        <RadioButton
            android:id="@+id/rdMemory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_internal_memory" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGo"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="3dp" />
</androidx.constraintlayout.widget.ConstraintLayout>